# LM-quant

./: README.md  pyproject.toml
notebooks/: QAT_crows.ipynb  RLHF_crows.ipynb
src/lm_quant/: __init__.py  main.py
src/lm_quant/models/: model.py
