[project]
name = "lm-quant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "invi_bhagyesh", email = "104337027+invi-bhagyesh@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastchat>=0.1.0",
    "lm-eval>=0.4.9.1",
    "torch>=2.9.1",
    "transformers>=4.57.1",
    "trl>=0.25.1",
]

[project.scripts]
lm-quant = "lm_quant.main:main"

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
